<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Carrier" Id="{9cf73b49-fa6f-472f-ade2-420e440d456c}">
    <Declaration><![CDATA[TYPE ST_Carrier :
STRUCT
	nId : UDINT;
	
	//Locations
	eDestination : E_Location;
	eActLocation : E_Location;
	ePrevLocation : E_Location;
	
	//Operations
	bNewTBAtInfeed : BOOL;
	bOuterDoorOpened : BOOL;
	bApprovedAtInfeed : BOOL;
	
	//Centering
	bCenteringDone : BOOL;
	
	//(Un)docking
	bDockingDone : BOOL;
	bUndockingDone : BOOL;
	
	//Open/close inner door
	bCloseInnerDoorDone : BOOL;
	bOpenInnerDoorDone : BOOL;
	
	//Cleaning
	bFlushedCleaned : BOOL;
	
	//Lifting transort
	bMovedTrolleyFromTbToCabin : BOOL;
	bMovedTrolleyFromCabinToTb : BOOL;
		
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>