<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="OBJ_Carrier" Id="{788a2610-a427-4d98-80b8-1d15416d7282}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK OBJ_Carrier IMPLEMENTS I_Carrier
VAR
	s_stCarrier : ST_Carrier;
	s_eLocationTmp : E_Location := E_Location.UNKNOWN;
	s_nIdCnt : UDINT := 0;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
IF s_stCarrier.eActLocation <> s_eLocationTmp THEN
	s_stCarrier.ePrevLocation := s_eLocationTmp;
	s_eLocationTmp := s_stCarrier.eActLocation;
END_IF
]]></ST>
    </Implementation>
    <Method Name="m_Create" Id="{c6c953b1-fcb7-4b86-b625-1792b3127902}">
      <Declaration><![CDATA[METHOD PUBLIC m_Create : BOOL
VAR_INPUT
//	i_stCarrier : ST_Carrier;
	i_eDestination : E_Location;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[s_nIdCnt := s_nIdCnt + 1;
s_stCarrier.nId := s_nIdCnt;

s_stCarrier.eDestination := i_eDestination;
s_stCarrier.eActLocation := E_Location.INFEED;
s_stCarrier.ePrevLocation := E_Location.UNKNOWN;

s_stCarrier.bNewTBAtInfeed := TRUE;
s_stCarrier.bOuterDoorOpened := FALSE;
s_stCarrier.bApprovedAtInfeed := FALSE;
s_stCarrier.bCenteringDone := FALSE;
s_stCarrier.bDockingDone := FALSE;
s_stCarrier.bUndockingDone := FALSE;
s_stCarrier.bCloseInnerDoorDone := FALSE;
s_stCarrier.bOpenInnerDoorDone := FALSE;
s_stCarrier.bFlushedCleaned := FALSE;

m_Create := TRUE;
	]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_Destroy" Id="{d56f70cf-7c4c-4ba2-98ee-eb4d8cd854fe}">
      <Declaration><![CDATA[METHOD PUBLIC m_Destroy : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
s_stCarrier.nId := 0;

s_stCarrier.eDestination := E_Location.UNKNOWN;
s_stCarrier.eActLocation := E_Location.UNKNOWN;
s_stCarrier.ePrevLocation := E_Location.UNKNOWN;
s_eLocationTmp := E_Location.UNKNOWN;

s_stCarrier.bNewTBAtInfeed := FALSE;
s_stCarrier.bOuterDoorOpened := FALSE;
s_stCarrier.bApprovedAtInfeed := FALSE;
s_stCarrier.bCenteringDone := FALSE;
s_stCarrier.bDockingDone := FALSE;
s_stCarrier.bUndockingDone := FALSE;
s_stCarrier.bCloseInnerDoorDone := FALSE;
s_stCarrier.bOpenInnerDoorDone := FALSE;
s_stCarrier.bFlushedCleaned := FALSE;

m_Destroy := TRUE;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_Force" Id="{e33de8aa-b0f4-4f66-84c3-6ab5c51064f7}">
      <Declaration><![CDATA[METHOD PUBLIC m_Force : BOOL
VAR_INPUT
	i_stCarrier : ST_Carrier;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_initNewCarrier" Id="{234cad66-503e-431c-8f10-335fb71fd3a2}">
      <Declaration><![CDATA[METHOD PUBLIC m_initNewCarrier : BOOL
VAR_INPUT
	i_eDestination : E_Location := E_Location.UNKNOWN;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
s_eLocation := E_Location.INFEED;
s_eLocationPrev := E_Location.INFEED;
s_eDestination := i_eDestination;
	
s_bCheckedAtInfeed := FALSE;
s_bAlligned := FALSE;
s_bDocked := FALSE;
s_bUnDocked := FALSE;
s_bFlushed := FALSE;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_UpdateLocation" Id="{a4a2e846-b854-4341-a473-86af574eac06}">
      <Declaration><![CDATA[METHOD PUBLIC m_UpdateLocation : BOOL
VAR_INPUT
	i_eLocation : E_Location;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
s_stCarrier.eActLocation := i_eLocation;

m_UpdateLocation := TRUE;
]]></ST>
      </Implementation>
    </Method>
    <Property Name="p_bApprovedAtInfeed" Id="{21c64484-ef0c-45cc-a923-08be7e4e4c1b}">
      <Declaration><![CDATA[{attribute 'monitoring':='call'}
PROPERTY PUBLIC p_bApprovedAtInfeed : BOOL]]></Declaration>
      <Get Name="Get" Id="{2dbea201-6377-42b8-b6bc-4911549a1492}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
p_bApprovedAtInfeed := s_stCarrier.bApprovedAtInfeed;
]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{9b43d9fd-a060-400b-a13b-ed4f43b7276d}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
s_stCarrier.bApprovedAtInfeed := p_bApprovedAtInfeed;
]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="p_bCenteringDone" Id="{d69c5412-5c2c-45b4-8be3-5444487f9c4a}">
      <Declaration><![CDATA[{attribute 'monitoring':='call'}
PROPERTY PUBLIC p_bCenteringDone : BOOL]]></Declaration>
      <Get Name="Get" Id="{91ff997c-7b50-43ae-8859-6bc029d4a907}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
p_bCenteringDone := s_stCarrier.bCenteringDone;
]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{1b159a04-f5d9-40fc-a788-b805f96673f4}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
s_stCarrier.bCenteringDone := p_bCenteringDone;
]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="p_bCloseInnerDoorDone" Id="{8ee7792b-c143-4d89-b37f-80b4d835d688}">
      <Declaration><![CDATA[{attribute 'monitoring':='call'}
PROPERTY PUBLIC p_bCloseInnerDoorDone : BOOL]]></Declaration>
      <Get Name="Get" Id="{515f1fdb-7928-487f-a09d-7f379ad5e8c3}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
p_bCloseInnerDoorDone := s_stCarrier.bCloseInnerDoorDone;
]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{ba502729-dca1-4c29-9504-c5eade2549f3}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
s_stCarrier.bCloseInnerDoorDone := p_bCloseInnerDoorDone;
]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="p_bDockingDone" Id="{0dd4db6b-9473-474f-9c93-b344ba746cba}">
      <Declaration><![CDATA[{attribute 'monitoring':='call'}
PROPERTY PUBLIC p_bDockingDone : BOOL]]></Declaration>
      <Get Name="Get" Id="{8355eeeb-b58b-4af2-8a27-965487da35a5}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
p_bDockingDone := s_stCarrier.bDockingDone;
]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{3591c03c-cbf9-4f99-90db-46ae82e48ef9}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
s_stCarrier.bDockingDone := p_bDockingDone;
]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="p_bFlushedCleaned" Id="{f3ffe3a1-4925-48a7-a230-3a8593a53515}">
      <Declaration><![CDATA[{attribute 'monitoring':='call'}
PROPERTY PUBLIC p_bFlushedCleaned : BOOL]]></Declaration>
      <Get Name="Get" Id="{c309fdb1-b242-4932-9a08-2959c4f7d4a0}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
p_bFlushedCleaned := s_stCarrier.bFlushedCleaned;
]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{c44cc6d5-fbb2-491f-9876-6b9fc7b7d2e7}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
s_stCarrier.bFlushedCleaned := p_bFlushedCleaned;
]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="p_bNewTbAtInfeed" Id="{250b49f7-262b-4bfe-be15-11e574637f84}">
      <Declaration><![CDATA[{attribute 'monitoring':='call'}
PROPERTY PUBLIC p_bNewTbAtInfeed : BOOL]]></Declaration>
      <Get Name="Get" Id="{1609da84-a61c-49c9-9c8e-92cf5f0b322f}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
p_bNewTbAtInfeed := s_stCarrier.bNewTbAtInfeed;
]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{48fad1a9-448d-4f90-a39a-ffbc217a1960}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
s_stCarrier.bNewTbAtInfeed := p_bNewTbAtInfeed;
]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="p_bOpenInnerDoorDone" Id="{82ef863e-5554-44df-9b0a-f0a9602e9f54}">
      <Declaration><![CDATA[{attribute 'monitoring':='call'}
PROPERTY PUBLIC p_bOpenInnerDoorDone : BOOL]]></Declaration>
      <Get Name="Get" Id="{342b4669-01a6-42f5-8ef7-286bfa30c352}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
p_bOpenInnerDoorDone := s_stCarrier.bOpenInnerDoorDone;
]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{01bcb549-a4c0-4dae-b562-83599c8f4ae3}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
s_stCarrier.bOpenInnerDoorDone := p_bOpenInnerDoorDone;
]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="p_bOuterDoorOpened" Id="{40846888-6754-40fa-a872-9cac5d08a7d3}">
      <Declaration><![CDATA[{attribute 'monitoring':='call'}
PROPERTY PUBLIC p_bOuterDoorOpened : BOOL]]></Declaration>
      <Get Name="Get" Id="{0a8811f6-6453-4aad-99c2-a1b29d8ae361}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
p_bOuterDoorOpened := s_stCarrier.bOuterDoorOpened;
]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{9f631bcd-2651-4d2a-8318-d66b679b747f}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
s_stCarrier.bOuterDoorOpened := p_bOuterDoorOpened;
]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="p_bUndockingDone" Id="{51f9786b-f356-4aff-954a-cf40a15fe5ff}">
      <Declaration><![CDATA[{attribute 'monitoring':='call'}
PROPERTY PUBLIC p_bUndockingDone : BOOL]]></Declaration>
      <Get Name="Get" Id="{822bb299-2b8a-4465-bc53-f9835e7cf170}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
p_bUndockingDone := s_stCarrier.bUndockingDone;
]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{42d09cce-40ff-4e75-9d3b-619c4748144a}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
s_stCarrier.bUndockingDone := p_bUndockingDone;
]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="p_eActLocation" Id="{a5592312-8b05-45c5-a594-5a434b6a0aac}">
      <Declaration><![CDATA[{attribute 'monitoring':='call'}
PROPERTY PUBLIC p_eActLocation : E_Location]]></Declaration>
      <Get Name="Get" Id="{242ea7ea-80d9-4806-8bd8-b9f5478cdc71}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
p_eActLocation := s_stCarrier.eActLocation;
]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{6a798601-b837-4016-ace2-8fef13d6ed07}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
s_stCarrier.eActLocation := p_eActLocation;
]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="p_eDestination" Id="{b5c2a005-f24c-47c7-b596-cc92f8422147}">
      <Declaration><![CDATA[{attribute 'monitoring':='call'}
PROPERTY PUBLIC p_eDestination : E_Location]]></Declaration>
      <Get Name="Get" Id="{075c546d-dc3e-46d0-805f-bdc70e2e2a56}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
p_eDestination := s_stCarrier.eDestination;
]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{6cd2da6a-84f6-4ca1-8c2b-5f4f7367fdf3}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
s_stCarrier.eDestination := p_eDestination;
]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="p_ePrevLocation" Id="{429995c5-dd26-4805-b511-29aa571c98b5}">
      <Declaration><![CDATA[{attribute 'monitoring':='call'}
PROPERTY PUBLIC p_ePrevLocation : E_Location]]></Declaration>
      <Get Name="Get" Id="{13184503-88fb-4097-accb-94e98c6eefde}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
p_ePrevLocation := s_stCarrier.ePrevLocation;
]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="p_nId" Id="{64602fd9-52b1-4aba-a5e6-32f1770eaf66}">
      <Declaration><![CDATA[{attribute 'monitoring':='call'}
PROPERTY PUBLIC p_nId : UDINT]]></Declaration>
      <Get Name="Get" Id="{88b523c1-3fb7-49a6-95f7-aa32df3a44ad}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[
p_nId := s_stCarrier.nId;
]]></ST>
        </Implementation>
      </Get>
    </Property>
  </POU>
</TcPlcObject>